# DQN_flip_up_paper

./: README.md
dynamixel_controllers/nodes/: controller_manager.py
dynamixel_driver/src/dynamixel_driver/: dynamixel_const.py  dynamixel_io.py  dynamixel_serial_proxy.py
dynamixel_msgs/: CMakeLists.txt
dynamixel_msgs/msg/: JointState.msg  MotorPWM.msg  MotorState.msg  SensorState.msg  dataFrame.msg  stateData.msg
model/4/: model_10.pth  model_100.pth  model_20.pth  model_30.pth  model_60.pth  model_70.pth  model_80.pth
model/4/loss/: epoch_12  epoch_13  epoch_15  epoch_16  epoch_17  epoch_18  epoch_2  epoch_20  epoch_23  epoch_26  epoch_27  epoch_28  epoch_29  epoch_3  epoch_30  epoch_31  epoch_33  epoch_37  epoch_39  epoch_40  epoch_42  epoch_43  epoch_44  epoch_47  epoch_48  epoch_52  epoch_54  epoch_55  epoch_57  epoch_58  epoch_59  epoch_6  epoch_60  epoch_61  epoch_66  epoch_68  (+18 more)
model/5/: model_0.pth  model_10.pth  model_100.pth  model_20.pth  model_30.pth  model_40.pth  model_50.pth  model_60.pth  model_90.pth
model/withoutD/: model_0.pth  model_10.pth  model_100.pth  model_20.pth  model_30.pth  model_90.pth
model/withoutXY/: model.pth  model_0.pth  model_40.pth  model_50.pth  model_90.pth
sensor/: DistanceSensor.py
video/: IMG_3939.avi  IMG_3946.avi  README.md
work/: CMakeLists.txt  package.xml
work/config/: dynamixel_joint_controllers.yaml
work/launch/: README  controller_manager.launch  csv_data.csv  dataMerge.py  dqnTest.py  dqnTrain.py  getMessage.py  mainCtrl(backup).py  mainCtrl.py  readLoss.py  sensor.py  start.launch  teleop.py
(+146 files in other folders)
